squashing bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,6 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #a38f79;
+  background-color: gray;
 }
 
